--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -25,15 +25,15 @@
 
 		<!-- Social media -->
 		<div id="social" class="small-12 medium-5 large-4 columns">
-			<a href="#"><img class="social-media" alt="Facebook" src="../assets/img/image-0.png"></a>
-			<a href="#"><img class="social-media" alt="Instagram" src="../assets/img/image-1.png"></a>
-			<a href="#"><img class="social-media" alt="Spotify" src="../assets/img/image-2.png"></a>
-			<a href="#"><img class="social-media" alt="Twitter" src="../assets/img/image-3.png"></a>
-			<a href="#"><img class="social-media" alt="YouTube" src="../assets/img/image-4.png"></a>
-			<a href="#"><img class="social-media" alt="SoundCloud" src="../assets/img/image-5.png"></a>
-			<a href="#"><img class="social-media" alt="E-mail" src="../assets/img/image-6.png"></a>
+			<a href="#" class="fa fa-facebook"></a>
+			<a href="#" class="fa fa-instagram"></a>
+			<a href="#" class="fa fa-spotify"></a>
+			<a href="#" class="fa fa-twitter"></a>
+			<a href="#" class="fa fa-youtube"></a>
+			<a href="#" class="fa fa-soundcloud"></a>
+			<a href="#" class="fa fa-envelope"></a>
 			<!-- Login -->
-			<a href="#"><img alt="Login" src="../assets/img/image-7.png"> Login </a>
+			<a href="#" class="fa fa-sign-in"> Login </a>
 		</div>	
 	  </div>
 	</div>
@@ -41,7 +41,7 @@
 
   <section id="slideshow" class="small-12 columns">
 	<!-- Slideshow -->
-	<img class="slideshow-image" alt="2 Chainz" src="../assets/img/image-8.jpg">
+	<img class="slideshow-image" alt="2 Chainz" src="../assets/img/image-1.jpg">
 	<!-- Title -->
 	<div id="main-title">
 		<h2>Pretty Girls<br/>Like Trap Music</h2>
@@ -58,7 +58,7 @@
 		</figcaption>
 
 		<!-- Image -->
-		<img class="new-album-image" alt="2 Chainz" src="../assets/img/image-9.jpg">
+		<img class="new-album-image" alt="2 Chainz" src="../assets/img/image-2.jpg">
   </figure>
   <div class="small-12 large-8 columns">
 
@@ -101,7 +101,7 @@
 		<!-- News #1 (Bigger) -->
 		<article class="small-12 large-6 columns">
 			<figure>
-				<img class="bigger-image" alt="News 1" src="../assets/img/image-10.jpg">
+				<img class="bigger-image" alt="News 1" src="../assets/img/image-3.jpg">
 			</figure>
 			<figcaption class="bigger-image">
 				<p>Watch 2 Chainz & Lil Wayne's New Video "Bounce"<br/>
@@ -113,7 +113,7 @@
 		<!-- News #2 -->
 		<article class="small-6 large-3 columns">
 			<figure>
-				<img class="smaller-image" alt="News 2" src="../assets/img/image-11.jpg">
+				<img class="smaller-image" alt="News 2" src="../assets/img/image-4.jpg">
 			</figure>
 			<figcaption class="smaller-image">
 				<p>Get the dabbin this holiday season & purchase the...</p>
@@ -123,7 +123,7 @@
 		<!-- News #3 -->
 		<article class="small-6 large-3 columns">
 			<figure>
-				<img class="smaller-image" alt="News 3" src="../assets/img/image-12.jpg">
+				<img class="smaller-image" alt="News 3" src="../assets/img/image-5.jpg">
 			</figure>
 			<figcaption class="smaller-image">
 				<p>2 Chainz performing live at hempcon Nov. 7th</p>
@@ -133,7 +133,7 @@
 		<!-- News #4 -->
 		<article class="small-6 large-3 columns">
 			<figure>
-				<img class="smaller-image" alt="News 4" src="../assets/img/image-13.jpg">
+				<img class="smaller-image" alt="News 4" src="../assets/img/image-6.jpg">
 			</figure>
 			<figcaption class="smaller-image">
 				<p>Watch out! 2 Chainz premieres new music on 1st annual bet...</p>
@@ -143,7 +143,7 @@
 		<!-- News #5 -->
 		<article class="small-6 large-3 columns">
 			<figure>
-				<img class="smaller-image" alt="News 5" src="../assets/img/image-14.jpg">
+				<img class="smaller-image" alt="News 5" src="../assets/img/image-7.jpg">
 			</figure>
 			<figcaption class="smaller-image">
 				<p>GQ's most expensivest shit: 2 Chainz buys $14K Chair?</p>
@@ -158,7 +158,7 @@
 </section><!-- End of news section -->
 
 <section id="tour-dates" class="row">
-	<img class="bg-image" alt="Background" src="../assets/img/image-15.jpg">
+	<img class="bg-image" alt="Background" src="../assets/img/image-8.jpg">
 	<div class="tour-box small-12 columns">
 		<div class="small-12 large-3 columns"></div>
 		<div class="small-12 large-9 columns">
@@ -230,65 +230,69 @@
 <section id="newsletter" class="row">
   <div class="small-12 columns">
 	<h3>Newsletter</h3>
-	<form class="row form-wrapper">
+	<form id="form" class="row form-wrapper">
 	  <div class="newsletter-wrapper small-12 columns">
-	      <!-- Input text fiels for E-mail address and ZIP Code -->
-		  <input class="newsletter-field small-12 medium-6 columns" 
-		  type="email" name="E-mail" placeholder="EMAIL ADDRESS *" required>
-
-	      <!-- I used Regex for the ZIP code pattern. -->
-		  <input class="newsletter-field small-12 medium-6 columns" 
-		  type="text" pattern="(\d{5}([\-]\d{4})?)" name="ZIP Code" placeholder="ZIP CODE *" required>
-	  </div>
+			<!-- Input text fiels for E-mail address and ZIP Code -->
+			<span class="small-12 medium-6 columns">
+					<input class="newsletter-field" 
+					type="email" name="E-mail" placeholder="EMAIL ADDRESS *" required>
+			</span>
+			<!-- I used Regex for the ZIP code pattern. -->
+			<span class="small-12 medium-6 columns">
+					<input class="newsletter-field" 
+					type="text" pattern="(\d{5}([\-]\d{4})?)" name="ZIP Code" placeholder="ZIP CODE *" required>
+			</span>
+		</div>
 	  
 	<h5 class="small-12 columns">Subscribe to email updates from:</h5>
 	    <!-- Checkboxes -->
 		<div class="small-12 columns">
 		  <span class="small-12 medium-4 columns check-list">
-		    <input id="checkbox-1" type="checkbox" name="2Chainz">
-			<label class="checkbox-label">2 Chainz</label>
+				<label class="checkbox-label">
+				<input id="checkbox-1" type="checkbox" name="2Chainz" checked> 2 Chainz</label>
 		  </span>
 		  <span class="small-12 medium-4 columns check-list">
-		    <input id="checkbox-2" type="checkbox" name="DefJamRecords">
-			<label class="checkbox-label">Def Jam Records</label>
+				<label class="checkbox-label">
+				<input id="checkbox-2" type="checkbox" name="DefJamRecords" checked> Def Jam Records</label>
 		  </span>
 		  <span class="small-12 medium-4 columns check-list">
-		    <input id="checkbox-3" type="checkbox" name="UniversalMusicGroup">
-			<label class="checkbox-label">Universal Music Group</label>
+				<label class="checkbox-label">
+				<input id="checkbox-3" type="checkbox" name="UniversalMusicGroup" checked> Universal Music Group</label>
 		  </span>
 		</div>
 
 		<!-- Form submission -->
 		<div class="submission small-12 columns">
 		  <p>My selecting submit you agree to the Universal Music Group privacy policy.</p>  
-		  <input id="submit-form" type="submit" value="Submit">
+		  <input id="submit-form" type="submit" value="Submit" onsubmit="submit()">
 		</div>
 	</form>
+	<div id="submission-message"></div>
   </div>
 </section><!-- End of newsletter section -->
 
 <footer class="row">
 	<!-- Copywrite -->
-	<div class="small-12 medium-12 large-3 columns">
+	<div class="small-12 medium-12 large-2 columns">
 		<p>&copy; Def Jam Records</p>
 	</div>
 
 	<!-- Footer links -->
-	<div class="small-12 medium-6 large-3 columns">
+	<div class="small-12 medium-6 large-2 columns">
 		<a href="#">Terms & Conditions</a>
 	</div>
-	<div class="small-12 medium-6 large-3 columns">
+	<div class="small-12 medium-6 large-2 columns">
 		<a href="#">Privacy Policy</a>
 	</div>
 	
 	<!-- Social media -->
-	<div class="small-12 medium-12 large-3 columns">
-		<a href="#"><img class="social-media" alt="Facebook" src="../assets/img/image-0.png"></a>
-		<a href="#"><img class="social-media" alt="Instagram" src="../assets/img/image-1.png"></a>
-		<a href="#"><img class="social-media" alt="Spotify" src="../assets/img/image-2.png"></a>
-		<a href="#"><img class="social-media" alt="Twitter" src="../assets/img/image-3.png"></a>
-		<a href="#"><img class="social-media" alt="YouTube" src="../assets/img/image-4.png"></a>
-		<a href="#"><img class="social-media" alt="SoundCloud" src="../assets/img/image-5.png"></a>
-		<a href="#"><img class="social-media" alt="E-mail" src="../assets/img/image-6.png"></a>
+	<div class="small-12 medium-12 large-6 columns">
+		<a href="#" class="fa fa-facebook social"></a>
+		<a href="#" class="fa fa-instagram social"></a>
+		<a href="#" class="fa fa-spotify social"></a>
+		<a href="#" class="fa fa-twitter social"></a>
+		<a href="#" class="fa fa-youtube social"></a>
+		<a href="#" class="fa fa-soundcloud social"></a>
+		<a href="#" class="fa fa-envelope social"></a>
 	</div>
 </footer><!-- End of footer -->
