Changes in margin/padding in multiple areas.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -33,7 +33,7 @@
 			<a href="#" class="fa fa-soundcloud"></a>
 			<a href="#" class="fa fa-envelope"></a>
 			<!-- Login -->
-			<a href="#" class="fa fa-sign-in"> Login </a>
+			<a href="#" class="fa fa-sign-in"> Login</a>
 		</div>	
 	  </div>
 	</div>
@@ -96,8 +96,7 @@
 
 <section id="news" class="row">
 	<h3 class="small-12 columns">News</h3>
-	<div class="small-12 columns row">
-
+	<div class="small-12 columns">
 		<!-- News #1 (Bigger) -->
 		<article class="small-12 large-6 columns">
 			<figure>
