--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -33,7 +33,7 @@
 			<a href="#" class="fa fa-soundcloud"></a>
 			<a href="#" class="fa fa-envelope"></a>
 			<!-- Login -->
-			<a href="#" class="fa fa-sign-in"> Login</a>
+			<a href="#" class="fa fa-sign-in"><span class="social">Login</span></a>
 		</div>	
 	  </div>
 	</div>
@@ -104,7 +104,7 @@
 			</figure>
 			<figcaption class="bigger-image">
 				<p>Watch 2 Chainz & Lil Wayne's New Video "Bounce"<br/>
-					<a href="#">Read More</a>
+					<a href="#" class="read-more">Read More</a>
 				</p>
 			</figcaption>
 		</article>
