Moving index to multiple partials.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,297 +1,6 @@
-<header class="row small-12 columns">
-  <section id="menu" class="small-12 columns">
-	<div class="expanded small-collapse medium-uncollapse small-12 columns">
-
-		<!-- Hamburger button -->
-		<div class="title-bar small-12 columns" data-responsive-toggle="2chainz-menu" data-hide-for="medium">
-		  <button class="menu-icon" type="button" data-toggle="2chainz-menu"></button>
-		  <div class="title-bar-title">2 CHAINZ</div> <!-- Name aside hamburger button -->
-		</div>
-
-		<!-- Navigation -->
-		<div id="2chainz-menu" class="float-left vertical medium-horizontal small-12 columns">
-			<nav class="small-12 medium-5 large-4 columns">
-				<a class="active" href="#">News</a>
-				<a href="#">Music</a>
-				<a href="#">Video</a>
-				<a href="#">Photos</a>
-				<a href="#">Store</a>
-			</nav>
-
-		<!-- Artist name -->
-		<div class="small-12 medium-2 large-4 columns">
-			<h1>2 Chainz</h1>
-		</div>
-
-		<!-- Social media -->
-		<div id="social" class="small-12 medium-5 large-4 columns">
-			<a href="#" class="fa fa-facebook"></a>
-			<a href="#" class="fa fa-instagram"></a>
-			<a href="#" class="fa fa-spotify"></a>
-			<a href="#" class="fa fa-twitter"></a>
-			<a href="#" class="fa fa-youtube"></a>
-			<a href="#" class="fa fa-soundcloud"></a>
-			<a href="#" class="fa fa-envelope"></a>
-			<!-- Login -->
-			<a href="#" class="fa fa-sign-in"><span class="social">Login</span></a>
-		</div>	
-	  </div>
-	</div>
-  </section><!-- End of menu section -->
-
-  <section id="slideshow" class="small-12 columns">
-	<!-- Slideshow -->
-	<img class="slideshow-image" alt="2 Chainz" src="../assets/img/image-1.jpg">
-	<!-- Title -->
-	<div id="main-title">
-		<h2>Pretty Girls<br/>Like Trap Music</h2>
-		<input id="scroll-down-btn" type="button" value="Listen Now">
-	</div>
-  </section><!-- End of slideshow section -->
-</header><!-- End of header -->
-
-<section id="new-album" class="row">
-  <figure class="small-12 large-4 columns">
-		<figcaption>
-			<h3>New Album</h3>
-			<h4>Pretty Girls Like Trap Music</h4>
-		</figcaption>
-
-		<!-- Image -->
-		<img class="new-album-image" alt="2 Chainz" src="../assets/img/image-2.jpg">
-  </figure>
-  <div class="small-12 large-8 columns">
-
-		<!-- Title -->
-		<div class="new-album-titles">
-			<h3>New Album</h3>
-			<h4>Pretty Girls Like Trap Music</h4>
-		</div>
-
-		<!-- Buttons -->
-		<div id="new-album-buttons" class="small-12 columns">
-			<input class="button" type="button" value="Spotify">
-			<input class="button" type="button" value="iTunes">
-			<input class="button" type="button" value="Google Play">
-			<input class="button" type="button" value="Amazon Music">
-		</div>
-
-		<!-- Track List -->
-		<span class="small-12 medium-6 columns">
-			<li><input class="number" type="button" value="1"> Good Drank - 2 Chainz, Gucci Mane, Quavo </li>
-			<li><input class="number" type="button" value="2"> Champions - Kayne West, Gucci Mabne, Big Sean </li>
-			<li><input class="number" type="button" value="3"> Watch Out - 2 Chainz </li>
-			<li><input class="number" type="button" value="4"> It's a Vibe - 2 Chainz, Ty Dolla $ign, Trey Songz </li>
-			<li><input class="number" type="button" value="5"> Good Drank 2.0 - 2 Chainz, Gucci Mane, Quavo </li>
-		</span>
-		<span class="small-12 medium-6 columns">
-			<li><input class="number" type="button" value="6"> We Own It (Fast & Furious) - 2 Chainz, Wiz Khalifa </li>
-			<li><input class="number" type="button" value="7"> Big Amount - 2 Chainz </li>
-			<li><input class="number" type="button" value="8"> Smartphone - 2 Chainz </li>
-			<li><input class="number" type="button" value="9"> El Chapo Jr - 2 Chainz </li>
-			<li><input class="number" type="button" value="10"> I'm Diferent - 2 Chainz </li>
-		</span>
-  </div>
-</section><!-- End of new album section -->
-
-<section id="news" class="row">
-	<h3 class="small-12 columns">News</h3>
-	<div class="small-12 columns">
-		<!-- News #1 (Bigger) -->
-		<article class="small-12 large-6 columns">
-			<figure>
-				<img class="bigger-image" alt="News 1" src="../assets/img/image-3.jpg">
-			</figure>
-			<figcaption class="bigger-image">
-				<p>Watch 2 Chainz & Lil Wayne's New Video "Bounce"<br/>
-					<a href="#" class="read-more">Read More</a>
-				</p>
-			</figcaption>
-		</article>
-
-		<!-- News #2 -->
-		<article class="small-6 large-3 columns">
-			<figure>
-				<img class="smaller-image" alt="News 2" src="../assets/img/image-4.jpg">
-			</figure>
-			<figcaption class="smaller-image">
-				<p>Get the dabbin this holiday season & purchase the...</p>
-			</figcaption>
-		</article>
-
-		<!-- News #3 -->
-		<article class="small-6 large-3 columns">
-			<figure>
-				<img class="smaller-image" alt="News 3" src="../assets/img/image-5.jpg">
-			</figure>
-			<figcaption class="smaller-image">
-				<p>2 Chainz performing live at hempcon Nov. 7th</p>
-			</figcaption>
-		</article>
-
-		<!-- News #4 -->
-		<article class="small-6 large-3 columns">
-			<figure>
-				<img class="smaller-image" alt="News 4" src="../assets/img/image-6.jpg">
-			</figure>
-			<figcaption class="smaller-image">
-				<p>Watch out! 2 Chainz premieres new music on 1st annual bet...</p>
-			</figcaption>
-		</article>
-
-		<!-- News #5 -->
-		<article class="small-6 large-3 columns">
-			<figure>
-				<img class="smaller-image" alt="News 5" src="../assets/img/image-7.jpg">
-			</figure>
-			<figcaption class="smaller-image">
-				<p>GQ's most expensivest shit: 2 Chainz buys $14K Chair?</p>
-			</figcaption>
-		</article>
-	</div>
-
-	<!-- View More button -->
-	<div class="view-more small-12 columns">
-      <input class="button" type="button" value="View More">
-	</div>
-</section><!-- End of news section -->
-
-<section id="tour-dates" class="row">
-	<img class="bg-image" alt="Background" src="../assets/img/image-8.jpg">
-	<div class="tour-box small-12 columns">
-		<div class="small-12 large-3 columns"></div>
-		<div class="small-12 large-9 columns">
-			<h3>Tour Dates</h3>
-			  
-			<!-- Tour details #1 -->
-			<li>
-				<span class="date">
-					<span class="yellow-date">Apr</span>14
-				</span>
-			  <span class="location">Cristler Center</span>
-				<span class="state">Ann Arbor, MI</span>
-				<span>
-					<input class="button" type="button" value="Tickets">
-				</span>
-			</li>
-			
-			<!-- Tour details #2 -->
-			<li>
-				<span class="date">
-					<span class="yellow-date">Apr</span>19
-				</span>
-				<span class="location">Lost Lakes Ampitheatre</span>
-				<span class="state">Oklahoma City, OK</span>
-				<span>
-					<input class="button" type="button" value="Tickets">
-				</span>
-			</li>
-			
-			<!-- Tour details #3 -->
-			<li>
-				<span class="date">
-					<span class="yellow-date">Apr</span>22
-				</span>
-				<span class="location">Pozo Saloon</span>
-				<span class="state">Santa Margarita, CA</span>
-				<span>
-					<input class="button" type="button" value="Tickets">
-				</span>
-			</li>
-			
-			<!-- Tour details #4 -->
-			<li>
-				<span class="date">
-					<span class="yellow-date">Apr</span>23
-				</span>
-				<span class="location">Mullins Center</span>
-				<span class="state">Amherst, MA</span>
-				<span>
-					<input class="button" type="button" value="Tickets">
-				</span>
-			</li>
-			
-			<!-- Tour details #5 -->
-			<li>
-				<span class="date">
-					<span class="yellow-date">Apr</span>28
-				</span>
-				<span class="location">Liacouras Center</span>
-				<span class="state">Philadelphia, PA</span>
-				<span>
-					<input class="button" type="button" value="Tickets">
-				</span>
-			</li>
-		</div>
-	</div>
-</section><!-- End of tour dates section -->
-
-<section id="newsletter" class="row">
-  <div class="small-12 columns">
-	<h3>Newsletter</h3>
-	<form id="form" class="row form-wrapper">
-	  <div class="newsletter-wrapper small-12 columns">
-			<!-- Input text fiels for E-mail address and ZIP Code -->
-			<span class="small-12 medium-6 columns">
-					<input class="newsletter-field" 
-					type="email" name="E-mail" placeholder="EMAIL ADDRESS *" required>
-			</span>
-			<!-- I used Regex for the ZIP code pattern. -->
-			<span class="small-12 medium-6 columns">
-					<input class="newsletter-field" 
-					type="text" pattern="(\d{5}([\-]\d{4})?)" name="ZIP Code" placeholder="ZIP CODE *" required>
-			</span>
-		</div>
-	  
-	<h5 class="small-12 columns">Subscribe to email updates from:</h5>
-	    <!-- Checkboxes -->
-		<div class="small-12 columns">
-		  <span class="small-12 medium-4 columns check-list">
-				<label class="checkbox-label">
-				<input id="checkbox-1" type="checkbox" name="2Chainz" checked> 2 Chainz</label>
-		  </span>
-		  <span class="small-12 medium-4 columns check-list">
-				<label class="checkbox-label">
-				<input id="checkbox-2" type="checkbox" name="DefJamRecords" checked> Def Jam Records</label>
-		  </span>
-		  <span class="small-12 medium-4 columns check-list">
-				<label class="checkbox-label">
-				<input id="checkbox-3" type="checkbox" name="UniversalMusicGroup" checked> Universal Music Group</label>
-		  </span>
-		</div>
-
-		<!-- Form submission -->
-		<div class="submission small-12 columns">
-		  <p>My selecting submit you agree to the Universal Music Group privacy policy.</p>  
-		  <input id="submit-form" type="submit" value="Submit" onsubmit="submit()">
-		</div>
-	</form>
-	<div id="submission-message"></div>
-  </div>
-</section><!-- End of newsletter section -->
-
-<footer class="row">
-	<!-- Copywrite -->
-	<div class="small-12 medium-12 large-2 columns">
-		<p>&copy; Def Jam Records</p>
-	</div>
-
-	<!-- Footer links -->
-	<div class="small-12 medium-6 large-2 columns">
-		<a href="#">Terms & Conditions</a>
-	</div>
-	<div class="small-12 medium-6 large-2 columns">
-		<a href="#">Privacy Policy</a>
-	</div>
-	
-	<!-- Social media -->
-	<div class="small-12 medium-12 large-6 columns">
-		<a href="#" class="fa fa-facebook social"></a>
-		<a href="#" class="fa fa-instagram social"></a>
-		<a href="#" class="fa fa-spotify social"></a>
-		<a href="#" class="fa fa-twitter social"></a>
-		<a href="#" class="fa fa-youtube social"></a>
-		<a href="#" class="fa fa-soundcloud social"></a>
-		<a href="#" class="fa fa-envelope social"></a>
-	</div>
-</footer><!-- End of footer -->
+{{> header}}
+{{> newalbum}}
+{{> news}}
+{{> tourdates}}
+{{> newsletter}}
+{{> footer}}
